# afo

./: .gitignore  README.md  __init__.py  link_length.csv  parameter_list.csv  rand_param.csv  rand_param_01.csv  rand_param_02.csv  rand_param_03.csv  run_afo.sh  run_afo_no_log.sh
afo_controller/: CMakeLists.txt  package.xml
afo_controller/config/: controlProfile.csv  dorsi.yaml  plantar.yaml  setup.yaml
afo_controller/include/: EthercatDeviceConfigurator.hpp  controller.h  main.h  main.hpp  sync.h
afo_controller/src/: EthercatDeviceConfigurator.cpp  controller.cpp  main.cpp  main.cpp.save  tuning.cpp
afo_controller/temp_log/: controller_7_15_13.csv  controller_7_15_18.csv  controller_7_15_2.csv  controller_7_15_20.csv  controller_7_15_34.csv  controller_7_15_4.csv  controller_7_15_8.csv  controller_8_17_18.csv  controller_8_17_19.csv  controller_8_17_21.csv  controller_8_17_24.csv  controller_8_17_28.csv  controller_8_17_30.csv  controller_8_17_32.csv  controller_8_17_34.csv  controller_8_17_35.csv  controller_8_17_41.csv  controller_8_17_42.csv  controller_8_17_44.csv  controller_8_17_45.csv  controller_8_17_50.csv  controller_8_17_53.csv  controller_8_17_54.csv  controller_8_17_56.csv  controller_8_17_57.csv  controller_8_18_2.csv  controller_8_18_6.csv  controller_8_18_9.csv  controller_9_13_0.csv  controller_9_13_28.csv  controller_9_14_51.csv  controller_9_14_52.csv  controller_9_15_3.csv
afo_detector/: CMakeLists.txt  package.xml  sensor_calibration_data.json  sensor_calibration_data_280.json
afo_detector/include/: main.hpp  segment.hpp
afo_detector/src/: jsoncpp.cpp  main.cpp  segment.cpp
afo_gui/: CMakeLists.txt  package.xml
afo_gui/build-af-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
afo_gui/src/: af.pro  draw.cpp  draw.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qnode.cpp  qnode.hpp
afo_launch/: CMakeLists.txt  package.xml
afo_launch/launch/: afo.launch  afo_launch.launch  afo_no_record.launch  afo_without_prediction.launch  calibration_launch.launch  fault.launch
afo_predictor/: CMakeLists.txt  CNNtraining.py  __init__.py  data_Predictor.py  data_predictor.py  data_replayer.py  model_training.py  package.xml  prediction_replay.py  prediction_test.py
afo_predictor/data/260/CNN_model/: 260Left_1.pt  260Left_2.pt  260Left_3.pt  260Left_4.pt  260Left_5.pt  260Left_6.pt  260Right_1.pt  260Right_2.pt  260Right_3.pt  260Right_4.pt  260Right_5.pt  260Right_6.pt
afo_predictor/data/260/Calibration/260Left_1/: force_conversion_test.csv  instron_cycle300um_mod.csv  interlink_calib_220833_12.csv  pointSensorL1_09270258_Leftsole.csv  sensor_cycle300um_mod.csv
afo_predictor/data/260/Calibration/260Left_2/: force_conversion_test.csv  instron_cycle300um_mod.csv  interlink_calib_220833_11.csv  pointSensorL2_09270256_Leftsole.csv  sensor_cycle300um_mod.csv
afo_predictor/data/260/Calibration/260Left_3/: force_conversion_test.csv  instron_cycle300um_mod.csv  (+3 more)
afo_predictor/data/270/CNN_model/: 270Left_1.pt  270Left_2.pt  270Left_3.pt  270Left_4.pt  270Left_5.pt  270Left_6.pt  270Right_1.pt  270Right_2.pt  270Right_3.pt  270Right_4.pt  270Right_5.pt  270Right_6.pt
afo_predictor/data/280/CNN_model/: 280Left_1.pt  280Left_2.pt  280Left_3.pt  280Left_4.pt  280Left_5.pt  280Left_6.pt  280Right_1.pt  280Right_2.pt  280Right_3.pt  280Right_4.pt  280Right_5.pt  280Right_6.pt
afo_predictor/data/280/CNN_model_0830/: 280Left_1.pt  280Left_3.pt  280Left_4.pt  280Left_5.pt  280Right_3.pt  280Right_5.pt
afo_predictor/data/280/CNN_model_0918/: 280Left_1.pt  280Left_2.pt  280Left_3.pt  280Left_4.pt  280Left_5.pt  280Left_6.pt  280Right_1.pt  280Right_2.pt  280Right_3.pt  280Right_4.pt  280Right_5.pt  280Right_6.pt
afo_predictor/data/280/Test/: test_data.csv  test_data_left.csv
afo_predictor/data/CHAR_1010_280/LSTM_model/: 280Left_1.pt  280Left_6.pt  280Right_1.pt
afo_predictor/data/RH10/CNN_model/: 280Left_1.pt  280Left_2.pt  280Left_3.pt  280Left_4.pt  280Left_5.pt  280Left_6.pt  280Left_7.pt  280Left_8.pt  280Right_1.pt  280Right_2.pt  280Right_3.pt  280Right_4.pt  280Right_5.pt  280Right_6.pt  280Right_7.pt  280Right_8.pt
afo_predictor/include/: CNNmodel.py  data_preprocessing.py  model.py  utils.py
afo_predictor/src/: data_predictor.py
afo_sensor/: CMakeLists.txt  package.xml
afo_sensor/include/afo_sensor/: main.h  serial.h
afo_sensor/src/: main.cpp  serial.cpp
afo_sync/: CMakeLists.txt  package.xml
afo_sync/include/: linux_kbhit.h
afo_sync/src/: main.cpp
hd/hd_compensator/: CMakeLists.txt  package.xml
hd/hd_predictor/: CMakeLists.txt  package.xml
hd/hd_predictor/include/hd_predictor/: main.hpp
hd/hd_predictor/src/: main.cpp
hd/hd_sensor/: CMakeLists.txt  package.xml
hd/hd_sensor/include/hd_sensor/: main.hpp  serial.hpp
hd/hd_sensor/src/: main.cpp  serial.cpp
sketch_sep17a/: sketch_sep17a.ino
temp_log/: log_2026-02-04-14-22-33.bag  log_2026-02-04-14-32-20.bag  log_2026-02-09-13-28-22.bag  log_2026-02-09-13-29-05.bag  log_2026-02-09-13-33-47.bag  log_2026-02-09-14-41-46.bag  log_2026-02-10-14-17-55.bag  log_2026-02-24-16-44-16.bag
test/: main.cpp
(+170 files in other folders)
